--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,9 +31,9 @@ build: off
 notifications:
 - provider: Email
   to:
-  - housecor@gmail.com
-  subject: 'Build failed: react-slingshot'
-  message: The continuous integration build failed. See https://ci.appveyor.com/project/CoryHouse/react-slingshot/ for details.
+  - magnusm@outlook.com
+  subject: 'Build failed: project-oskar'
+  message: The continuous integration build failed.
   on_build_success: false
   on_build_failure: true
   on_build_status_changed: false
