--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "object-assign": "4.1.0",
     "react": "16.2.0",
+    "react-day-picker": "7.1.9",
     "react-dom": "16.2.0",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
