--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "Magnus Mortensen",
   "license": "MIT",
   "dependencies": {
+    "node-modules": "1.0.1",
     "object-assign": "4.1.0",
     "react": "16.2.0",
     "react-day-picker": "7.1.9",
