--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-table": "6.8.6",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
     "toastr": "2.1.4"
