--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "lodash.groupby": "4.6.0",
+    "match-sorter": "2.2.3",
     "node-modules": "1.0.1",
     "object-assign": "4.1.0",
     "react": "16.2.0",
